fixed loader ids and scrollbar (still scrollable)

--- a/ExpositionSolacroup/src/Components/Loader/Loader.css
+++ b/ExpositionSolacroup/src/Components/Loader/Loader.css
@@ -1,4 +1,4 @@
-main {
+#loader-screen {
     height: 100vh;
     width: 100vw;
     background-color: var(--dark-blue);
