--- a/ExpositionSolacroup/src/Pages/Home.css
+++ b/ExpositionSolacroup/src/Pages/Home.css
@@ -1,13 +1,26 @@
+/* html {
+    height: 100vh;
+    overflow-x: hidden;
+} */
+
 #landing-screen {
     position: relative;
     height: 100vh;
+    width: 100vw;
     background-color: var(--dark-blue);
     overflow: hidden;
 }
 
+/* #landing-screen */
+::-webkit-scrollbar {
+    display: none;
+}
+
+
 video {
     position: absolute;
     bottom: 0;
+    max-width: 100%;
 }
 
 .titles {
@@ -37,10 +50,6 @@ video {
 }
 
 @media screen and (width<500px) {
-    html {
-        height: 100vh;
-        overflow: hidden;
-    }
 
     h1 {
         font-size: 4.8rem;
